--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <link rel="web icon" type="me-icon" href="logo.jpg">
+    <link rel="web icon" type="me-icon" href="img/logo.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>name</title>
+    <title>สีม่วง</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chonburi&family=Kanit&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,10 +33,10 @@
                 <!-- Content -->
                 <div class="content">
                     <h5 class="border-bottom" id="name">
-                        name
+                        ชื่อ
                     </h5>
                     <p id="caption">
-                        caption
+                        แคปชั่น
                     </p>
                 </div>
                 <!-- Content -->
@@ -58,7 +60,8 @@
                 <!-- Money -->
 
                 <footer>
-                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="ling" href="qr.html" target="_blank">Click</a></p>
+                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn btn-outline-primary" href="qr.html" target="_blank">Click</a>
+                    </p>
                     <a href="#"></a>
                 </footer>
 
@@ -108,7 +111,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="app.js"></script>
 </body>
 
 </html>
