--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!-- Money -->
 
                 <footer>
-                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn btn-outline-primary" href="qr.html" target="_blank">Click</a>
+                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn" href="qr.html" target="_blank">Click</a>
                     </p>
                     <a href="#"></a>
                 </footer>
