--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <!-- Content -->
                 <div class="content">
                     <h5 class="border-bottom" id="name">
-                        ชื่อ
+                        Khunanan Pattapee
                     </h5>
                     <p id="caption">
-                        แคปชั่น
+                        คุณอนันต์ปฐพี
                     </p>
                 </div>
                 <!-- Content -->
