--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Khunanan Pattapee
                     </h5>
                     <p id="caption">
-                        "แผ่นดินนี้ คือสายใยแห่งศรัทธาและลีลาแห่งมโนราห์"
+                        "แผ่นดินนี้ คือสายใยแห่งศรัทธา<br>และลีลาแห่งมโนราห์"
                     </p>
                 </div>
                 <!-- Content -->
