--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="web icon" type="me-icon" href="img/logo.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>สีม่วง</title>
+    <title>Khunanan Pattapee</title>
+    <meta property="og:image" content="https://xpzty1.github.io/sports-day/img/logo.jpg" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -45,10 +47,10 @@
 
                 <div class="socail">
                     <div class="follow">
-                        <p class="icon">สามารถติดตามพวกเราได้ที่</p>
+                        <p class="icon border-bottom">สามารถติดตามพวกเราได้ที่</p>
                         <div class="icon-socail">
-                            <p>name ig<a class="IG" href="#" target="_blank"><i class="bi bi-instagram"></i></a></p>
-                            <p>name fb<a class="F" href="#" target="_blank"><i class="bi bi-facebook"></i></a></p>
+                            <p>khunanan.official<a class="IG" href="https://www.instagram.com/khunanan.official/?utm_source=ig_web_button_share_sheet" target="_blank"><i class="bi bi-instagram"></i></a></p>
+                            <p>คณะสีม่วงคุณอนันต์ปฐพี <a class="F" href="https://www.facebook.com/share/1NgTs6Jwf5/" target="_blank"><i class="bi bi-facebook"></i></a></p>
 
                         </div>
                     </div>
@@ -57,12 +59,22 @@
                 <!-- Socail -->
 
 
+                <!--Sing in-->
+
+                <!-- <div class="sing-in">
+                    <div class="text">
+                        <p>น้องๆที่ต้องการสมัครรายการต่างๆ <a class="btn" href="#">Click</a></p>
+                    </div>
+                </div> -->
+
+                <!--Sing in-->
+
+
                 <!-- Money -->
 
                 <footer>
                     <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn" href="qr.html" target="_blank">Click</a>
-                    </p>
-                    <a href="#"></a>
+                    </p><a href="#"></a>
                 </footer>
 
                 <!-- Money -->
@@ -72,7 +84,7 @@
         </div>
     </div>
 
-    <script>
+    <!-- <script>
         document.addEventListener("DOMContentLoaded", function () {
             var img = new Image();
             img.src = 'img/logo.jpg';
@@ -106,7 +118,7 @@
                 document.body.style.backgroundColor = 'rgb(' + r + ',' + g + ',' + b + ')';
             };
         });
-    </script>
+    </script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
