--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="web icon" type="me-icon" href="img/logo.jpg">
+    <link rel="web icon" type="me-icon" href="img/icon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Khunanan Pattapee</title>
