--- a/qr.html
+++ b/qr.html
@@ -12,8 +12,10 @@
     <div class="c">
         <div class="container">
             <div class="qr-code">
-                <h2>คณะสีม่วงขอขอบคุณสำหรับทุกการสนับสนุนในงานกีฬาสีของพวกเรา</h2>
-                <img src="img/qrcode.png" alt="">
+                <!-- <h2>คณะสีม่วงขอขอบคุณสำหรับทุกการสนับสนุนในงานกีฬาสีของพวกเรา</h2>
+                <img src="img/qrcode.png" alt=""> -->
+
+                <h1>Coming Soon</h1>
             </div>
         </div>
     </div>
