--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <div class="follow">
                         <p class="icon border-bottom">สามารถติดตามพวกเราได้ที่</p>
                         <div class="icon-socail">
-                            <p>khunanan.official<a class="IG" href="https://www.instagram.com/khunanan.official/?utm_source=ig_web_button_share_sheet" target="_blank"><i class="bi bi-instagram"></i></a></p>
-                            <p>คณะสีม่วงคุณอนันต์ปฐพี <a class="F" href="https://www.facebook.com/share/1NgTs6Jwf5/" target="_blank"><i class="bi bi-facebook"></i></a></p>
+                            <p class="text-ig">khunanan.official<a class="IG" href="https://www.instagram.com/khunanan.official/?utm_source=ig_web_button_share_sheet" target="_blank"><i class="bi bi-instagram"></i></a></p>
+                            <p class="text-fb">คณะสีม่วงคุณอนันต์ปฐพี <a class="F" href="https://www.facebook.com/share/1NgTs6Jwf5/" target="_blank"><i class="bi bi-facebook"></i></a></p>
 
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                 <!-- Money -->
 
                 <footer>
-                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn" href="qr.html" target="_blank">Click</a>
+                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn" href="img/qrcode.png" target="_blank">Click</a>
                     </p><a href="#"></a>
                 </footer>
 
