--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- Money -->
 
                 <footer>
-                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn" href="img/qrcode.png" target="_blank">Click</a>
+                    <p class="text-money">สามารถสนับสนุนพวกเรา <a class="btn" href="img/Qr.png" target="_blank">Click</a>
                     </p><a href="#"></a>
                 </footer>
 
